[gd_scene load_steps=6 format=3 uid="uid://jjlrwo45mahy"]

[ext_resource type="Script" path="res://visual/file_writer.gd" id="1_oqb3e"]
[ext_resource type="Texture2D" uid="uid://p2qtk5ccvwp1" path="res://shared/bordered.png" id="2_7qkv5"]
[ext_resource type="FontFile" uid="uid://cgett34sxgpkt" path="res://shared/JetBrainsMonoNerdFontMono-Regular.ttf" id="3_8yere"]
[ext_resource type="Texture2D" uid="uid://do7vmtvdv60x6" path="res://narrator/assets/continue.svg" id="4_301cy"]

[sub_resource type="Theme" id="Theme_qxhyn"]
default_font = ExtResource("3_8yere")
default_font_size = 36

[node name="FileWriter" type="Control"]
custom_minimum_size = Vector2(400, 600)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oqb3e")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7qkv5")
patch_margin_left = 26
patch_margin_top = 26
patch_margin_right = 26
patch_margin_bottom = 26

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_qxhyn")
caret_type = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Quit" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
texture_normal = ExtResource("4_301cy")

[node name="Write" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
texture_normal = ExtResource("4_301cy")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Write" to="." method="_on_write_pressed"]
